# fullstack-tutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.sqlite3  dipdup.yml  docker-compose.yml  pyproject.toml
demo/: models.py
demo-sdk/: package.json
demo-ui/: README.md  package.json
demo-ui/src/: main.js
demo-ui/src/components/: HelloWorld.vue
demo/handlers/: on_configure.py  on_rollback.py  on_tez_to_token.py  on_token_to_tez.py
demo/hooks/: on_index_rollback.py
demo/types/plenty_fa12/: storage.py
demo/types/quipuswap_fa12/: storage.py
