[tool.poetry]
name = "dipdup-demo"
version = "0.1.0"
description = ""
authors = ["Michael Zaikin <mz@baking-bad.org>"]

[tool.poetry.dependencies]
python = "^3.9"
dipdup = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
