[tool.poetry]
name = "dipdup-demo"
version = "0.1.1"
description = ""
authors = ["Michael Zaikin <mz@baking-bad.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^5.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
